<resources>

    <!-- String technique de l'application -->
    <string name="app_name">Food Truck Lillois</string>
    <string name="app_version">0.5</string>
    <string name="app_name_developper">Maxime Gens</string>
    <string name="app_date_publication">1 juin 2016</string>
    <string name="title_main_activity">MainActivity</string>
    <string name="title_activity_food_truck">FoodTruckActivity</string>
    <string name="key_api_google_map">AIzaSyDASrlPPti8U3qoqoj8V0O3VVZ-cBCYwkc</string>
    <string name="id_google_analytics">UA-77292854-1</string>
    <string name="id_interstitiel">ca-app-pub-3668885861238587/2245159357</string>
    <string name="id_banner_ap_propos">ca-app-pub-3668885861238587/2823471751</string>
    <string name="adresse_mail_developpeur"><u>maximegens.developpement@gmail.com</u></string>

    <!-- String globaux-->
    <string name="filter_title_food_truck">Food Truck</string>
    <string name="fermer">Fermé</string>
    <string name="fermer_today">Fermé aujourd\'hui</string>
    <string name="fermer_ouverture_a">Fermé : ouverture à\u0020</string>
    <string name="ouvert">Ouvert</string>
    <string name="ouvert_jusque">Ouvert jusqu\'à\u0020</string>
    <string name="prix">Prix</string>
    <string name="prix_en_menu">Prix en menu</string>
    <string name="exit_app">Quitter l\'application</string>
    <string name="msg_exit">Voulez-vous quitter l\'application ?</string>
    <string name="version_display">Version </string>

    <!-- String SplashScreen-->
    <string name="splash_recup_ft">Récupération de la liste des Foods Truck en cours.</string>
    <string name="splash_lancement_ft">Téléchargement terminé, ouverture de l\'application en cours.</string>
    <string name="chargement">Chargement</string>

    <!-- String liste des food trucks-->
    <string name="msg_data_no_update">Attention la liste n\'a pas été mise à jour.</string>
    <string name="title_liste_food_truck">Les Food Trucks</string>
    <string name="ft_plus_proche">Food Truck le plus proche</string>
    <string name="recherche_plus_proche_en_cours">Recherche des Food Trucks les plus proche en cours…</string>
    <string name="liste_ft_vide">Il n\'y a pas de Food Trucks</string>
    <string name="gps_desactive">Activer le GPS pour afficher les Food Trucks les plus proches</string>
    <string name="activer_gps">Activer GPS</string>
    <string name="calcul_distance_en_cours">calcul..</string>
    <string name="erreur_localisation_ft">Désolé, impossible de récupérer l\'adresse précise du Food Truck d\'aujoud\'hui pour calculer l\'itinéraire.</string>

    <!-- Description du Foodtruck -->
    <string name="description_breve">Description</string>
    <string name="ouverture">Ouverture</string>
    <string name="distance">Distance</string>
    <string name="cuisine">Cuisine</string>
    <string name="gamme_prix">Gamme de prix</string>
    <string name="moyen_paiement">Moyen de paiement</string>
    <string name="telephone">Téléphone</string>
    <string name="email">Email</string>
    <string name="site_web">Site Web</string>
    <string name="page_facebook">Page Facebook</string>
    <string name="date_ouverture">Date d\'ouverture</string>
    <string name="specialite">Spécialité</string>
    <string name="service">Service</string>
    <string name="service_prive">Service privé</string>
    <string name="voir_description_complete">Voir description compléte</string>
    <string name="consulter_horaire">Consulter les horaires</string>
    <string name="consulter_facebook">Consulter la page Facebook</string>
    <string name="champ_non_communique">Non communiqué</string>
    <string name="distance_indisponible">Distance indisponible</string>

    <!-- String Planning -->
    <string name="title_planning">Planning</string>
    <string name="horaires_planning">Horaires</string>

    <!-- String Emplacement des food trucks. -->
    <string name="title_map_all">Map</string>
    <string name="no_connexion">Vous ne pouvez pas afficher la carte Google Map sans connexion Internet</string>
    <string name="no_adresses_ft">Aucunes adresses pour le Food Truck, veuillez consulter la page facebook pour connaitre l\'adresse du jour.</string>

    <!-- String Favoris -->
    <string name="title_favoris">Mes Favoris</string>
    <string name="aucun_favori">il n\'y a aucun favoris</string>

    <!-- String Contact -->
    <string name="title_contact">Contact</string>
    <string name="objet_contact">Objet</string>
    <string name="formulaire_contact">Formulaire de contact</string>
    <string name="mail_dev_contact">Me contacter directement par mail</string>
    <string name="contenu_contact">Indiquez votre demande…</string>
    <string name="button_envoyer">Envoyer</string>
    <string name="error_adresse_mail">Adresse mail incorrecte</string>
    <string name="error_contenu_mail">Message vide ou incorrecte</string>
    <string name="mail_contact">Votre adresse mail</string>
    <string name="description_contact_food_truck">Si les informations d\'un Food Truck sont incorrectes, qu\'un Food Truck n\'est pas renseigné ou si vous etez le propriétaire d\'un Food Truck et que vous souhaitez mettre à jour des informations merci de me contacter.</string>

    <!-- String A Propos -->
    <string name="title_a_propos">A propos</string>
    <string name="a_propos_developpeur">Développeur : </string>
    <string name="a_propos_version">Version : </string>
    <string name="a_propos_date_publication">Date de publication : </string>
    <string name="a_propos_de_app">L\'application \"Food Truck Lillois\"</string>
    <string name="copyright">© Copyright - Tous droits réservés.</string>
    <string name="a_propos_du_developpeur">A propos du développeur</string>
    <string name="a_propos_des_aides">Personnes ayant collaboré</string>
    <string name="contenu_a_propos_de_app">L\’application Food Truck Lillois est une application permettant de lister et de consulter tous les Food Trucks existant sur la région Lillois.
        \n\nL\’idée de cette application m\'est venue quelque temps après la fin de mes études, lorsqu’une fois dans le monde professionnel j’ai découvert l\’existant de ces camions ambulants sur mon lieu de travail.
        J’ai directement adoré le concept de nourriture moyen/haute de gamme accessible facilement à tous.
        \n\nSeulement je me suis vite aperçu que les Food Truck devenez de plus en plus nombreux sur la métropole Lilloise et qu\’il n’existé pas de moyen facile et rapide d\’avoir accès à l’ensemble des Food Trucks
        ainsi que leur emplacement au jour le jour.
        \n\nCette application est donc la première application mobile Android en France à répertorier l\’ensemble des Food Trucks sur la métropole Lilloise.
    </string>

    <string name="contenu_a_propos_du_developpeur">Application conçue et développé par Maxime Gens.
            \n\nIngénieur développeur Mobile Android de 26 ans.
            \nJe suis actuellement en poste en tant qu\'Ingénieur Etudes et Développement spécialisé dans la technologie Android.
            \n\nJ\'ai effectué mes études à l\'IUT de Calais-Boulogne afin d\'obtenir un D.U.T Informatique en 2010.
            \nJe suis ensuite parti sur Lille afin d\'obtenir un Master Informatique spécialité E-Services à L\'université des Sciences et Technologies de Lille 1 en 2014.
            \n\nCe master s\'articule autour de la conception et du développement des e-services, c\'est-à-dire les services accessibles au travers des moyens de communication numérique,
            notamment l\'Internet, mais également tous les nouveaux équipements de l\'informatique ubiquitaires, smart phones, interfaces multi-touch, interfaces vocales.
    </string>
    <string name="aides_saisie">Aide à la saisie des données</string>
    <string name="personne_aides_saisies_1">Alicia Laneeuw</string>

    <string name="realisation_logo">Création et réalisation du logo</string>
    <string name="personne_realisation_logo">Elisa Vanhoucke</string>

    <!-- Button -->
    <string name="retour_menu">Retour au menu</string>
    <string name="ok">OK</string>
    <string name="oui_faim">Oui j\'ai faim</string>
    <string name="go_faim">GO j\'ai faim !</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>

    <!-- Strings du drawer -->
    <string name="drawer_liste_ft">Voir les Food Trucks</string>
    <string name="drawer_planning">Planning des Food Trucks</string>
    <string name="drawer_emplacement">Les Emplacements</string>
    <string name="drawer_favoris">Mes Favoris</string>
    <string name="drawer_a_propos">A propos</string>
    <string name="drawer_contact">Contact</string>
    <string name="drawer_faire_don">Faire un don</string>
    <string name="openDrawer">Ouverture du menu</string>
    <string name="closeDrawer">Fermeture du menu</string>

    <!-- Menu -->
    <string name="menu_title_map_ft_spinner">Map du Food Truck</string>
    <string name="action_search">Rechercher un Food Truck</string>

    <!-- Nom pour Google Analytics -->
    <string name="ga_title_splashscreen">SplashScreen</string>
    <string name="ga_title_main_activity">MainActivity</string>
    <string name="ga_title_food_truck">FoodTruck</string>
    <string name="ga_title_favori">Favori</string>
    <string name="ga_title_a_propos">A Propos</string>
    <string name="ga_title_contact">Contact</string>
    <string name="ga_title_planning">Planning des Food Trucks</string>
    <string name="ga_title_description_food_truck">Description du FoodTruck</string>
    <string name="ga_title_menu_food_truck">Menu du FoodTruck</string>
    <string name="ga_title_map_food_truck">Emplacement du FoodTruck</string>

</resources>