<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/formulaire_contact"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                />


            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_contact_objet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.widget.TextView
                android:id="@+id/tvInvisibleError"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignRight="@+id/spinner_contact_objet"
                android:layout_alignBottom="@+id/spinner_contact_objet"
                android:layout_marginTop="0dp"
                android:paddingTop="0dp"
                android:paddingRight="50dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_mail_adresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/adresse_mail_contact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:textColor="@color/grey_700"
                    android:hint="@string/mail_contact"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_mail_contenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/contenu_msg_contact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:textColor="@color/grey_700"
                    android:hint="@string/contenu_contact"
                    android:inputType="textMultiLine"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button_envoyer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_envoyer"
                android:textColor="@color/white"
                android:theme="@style/ButtonRetourMenu"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/mail_dev_contact"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                />

            <TextView
                android:id="@+id/adresse_mail_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:padding="5dp"
                android:textColor="@color/blue_500"
                android:text="@string/adresse_mail_developpeur"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:text="@string/description_contact_food_truck"
                android:padding="5dp"
                />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>